guia 4 backend completo